--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "nodemon": "^1.19.2",
     "nunjucks": "^3.2.0",
     "path": "^0.12.7"
   }
